added resume skeleton, education portion, adjusted css

--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
         (402) 216-2512 | mason.leonhart@gmail.com
       </div>
     </header>
-    <body>
+    <body class="main-body">
+      <div class="education">
+        <h1 class="group title">Education</h1>
+        <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+        <h2 class="place">5800 Jamison Ave NE, St. Michael, MN 55376</h2>
+        <h2 class="place">--High School Diploma</h2>
+      </div>
+      <div class="experience">
 
-    </body>
+      </div>
+      <div class="skills">
+
+      </div>
     </body>
   </body>
 </html>
