--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="info">
         <div class="address">
-          2574 Atlantic Drive S., Fargo ND, 58103
+          2574 Atlantic Drive S., Fargo, ND 58103
         </div>
       <div class="number-email">
         (402) 216-2512 | mason.leonhart@gmail.com
@@ -22,15 +22,42 @@
     <body class="main-body">
       <div class="education">
         <h1 class="group title">Education</h1>
-        <h2 class="place">St. Michael-Albertville Senior High School,</h2>
-        <h2 class="place">5800 Jamison Ave NE, St. Michael, MN 55376</h2>
-        <h2 class="place">--High School Diploma</h2>
+          <div class="place-group">
+            <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+            <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
+            <h3 class="position">&mdash; High School Diploma</h3>
+            <h4 class="date">September 2014 - June 2018</h4>
+          </div>
       </div>
       <div class="experience">
-
+        <h1 class="group title">Experience</h1>
+          <div class="place-group">
+            <h2 class="place">The Tavern Grill,</h2>
+            <h2 class="place">4504 32nd Ave S., Fargo, ND 58104</h2>
+            <h3 class="position">&mdash; Server, Host</h3>
+            <h4 class="date">November 2019 - March 2020</h4>
+            <h5 class="description"><span>Responsibilites:</span> Serving, greeting, and sectioning of guests.</h5>
+          </div>
+          <div class="place-group">
+            <h2 class="place">Cintas,</h2>
+            <h2 class="place">1700 Main Ave W., West Fargo, ND 58078</h2>
+            <h3 class="position">&mdash; Loader/ Unloader</h3>
+            <h4 class="date">November 2018 - September 2019</h4>
+            <h5 class="description"><span>Responsibilites:</span> Worked in the warehouse loading and unloading product from company trucks.</h5>
+          </div>
+          <div class="place-group">
+            <h2 class="place">Pepper's Sports Cafe,</h2>
+            <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
+            <h3 class="position">&mdash; Server, Line Cook</h3>
+            <h4 class="date">June 2018 - November 2018</h4>
+            <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5> 
+          </div>
       </div>
-      <div class="skills">
+      <div class="education">
+        <h1 class="group title">Education</h1>
+          <div class="...">
 
+          </div>
       </div>
     </body>
   </body>
