Created education page and added directories

--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
   <title>Mason Leonhart's Resume</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" type="text/css" href="main.css"
+  <link rel="stylesheet" type="text/css" href="index/main.css"
   </head>
   <body>
     <header class="contact">
@@ -50,7 +50,7 @@
             <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
             <h3 class="position">&mdash; Server, Line Cook</h3>
             <h4 class="date">June 2018 - November 2018</h4>
-            <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5> 
+            <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5>
           </div>
       </div>
       <div class="education">
