--- a/education/education.html
+++ b/education/education.html
@@ -4,5 +4,5 @@
   <title>Mason Leonhart's Resume</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" type="text/css" href="index/main.css"
+  <link rel="stylesheet" type="text/css" href="main.css"
   </head>
