--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Mason Leonhart's Resume</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" type="text/css" href="index/main.css"
+  <link rel="stylesheet" type="text/css" href="main.css"
   </head>
   <body>
     <header class="contact">
