added directory for link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <body class="main-body">
-      <h1><a href="education.html">Click me!</a></h1>
+      <h1><a href="education/education.html">Click me!</a></h1>
       <div class="education">
         <h1 class="group title">Education</h1>
           <div class="place-group">
