--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
       </div>
     </header>
     <body class="main-body">
-      <h1><a href="education.html">Click me!</a></h1>
+      <table class="links" border="1">
+        <tr>
+          <th><a href="education.html">Education</a></th>
+          <th><a href="experience.html">Experience</a></th>
+          <th><a href="skills.html">Skills</a></th>
+        </tr>
+      </table>
       <div class="education">
         <h1 class="group title">Education</h1>
           <div class="place-group">
