--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
       <table class="links" border="1">
         <tr>
           <th><a href="index.html">Home</a></th>
+          <th><a href="education.html">Education</a></th>
           <th><a href="experience.html">Experience</a></th>
-          <th><a href="skills.html">Skills</a></th>
         </tr>
       </table>
