--- a/experience.html
+++ b/experience.html
@@ -20,10 +20,12 @@
       </div>
     </header>
     <body class="main-body">
-      <table class="links" border="1">
-        <tr>
-          <th><a href="index.html">Home</a></th>
-          <th><a href="education.html">Education</a></th>
-          <th><a href="skills.html">Skills</a></th>
-        </tr>
-      </table>
+      <div class="links">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+          </ul>
+        </nav>
+      </div>
