--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
       </div>
     </header>
     <body class="main-body">
-      <table class="links" border="1">
-        <tr>
-          <th><a href="education.html">Education</a></th>
-          <th><a href="experience.html">Experience</a></th>
-          <th><a href="skills.html">Skills</a></th>
-        </tr>
-      </table>
+      <div class="links">
+        <nav>
+          <ul>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="skills.html">Skills</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="education">
         <h1 class="group title">Education</h1>
           <div class="place-group">
