broke up information to different pages / added skills

--- a/skills.html
+++ b/skills.html
@@ -29,3 +29,10 @@
           </ul>
         </nav>
       </div>
+      <div class="education">
+        <h1 class="group title">Education</h1>
+          <div class="...">
+
+          </div>
+      </div>
+    </body>
