--- a/education.html
+++ b/education.html
@@ -29,3 +29,15 @@
           </ul>
         </nav>
       </div>
+      <div class="education">
+        <h1 class="group title">Education</h1>
+          <div class="place-group">
+            <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+            <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
+            <h3 class="position">&mdash; High School Diploma</h3>
+            <h4 class="date">September 2014 - June 2018</h4>
+            <h5 class="description"><hr> I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
+            </span> game in my free time. </h5>
+          </div>
+      </div>
+    </body>
