--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
             <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
             <h3 class="position">&mdash; High School Diploma</h3>
             <h4 class="date">September 2014 - June 2018</h4>
-            <h5 class="description"><hr> I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
+            <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
             </span> game in my free time. </h5>
           </div>
       </div>
