--- a/skills.html
+++ b/skills.html
@@ -29,10 +29,15 @@
           </ul>
         </nav>
       </div>
-      <div class="education">
-        <h1 class="group title">Education</h1>
-          <div class="...">
-
+      <div class="skills">
+        <h1 class="group title">Skills</h1>
+          <div class="skills">
+            <ul>
+              <li>Previous supervisors have told me that I run with an outstanding work ethic.</li>
+              <li>I consider myself very computer literate and I can pick new things up swiftly.</li>
+              <li>I thrive in any working enviornment, collaborating with colleagues or working alone.</li>
+              <li>I have great problem solving skills and try to find unique solutions to complications.</li>
+            </ul>
           </div>
       </div>
     </body>
