--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           </ul>
         </nav>
       </div>
-      
+      <div class="placeholder">
+        <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
+        <img src="placerholder github.jpg">
+      </div>
     </body>
   </body>
 </html>
