--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="placeholder">
         <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
-        <img src="placerholderphoto.jpg"/>
+        <img src="placeholderphoto.jpg"/>
       </div>
     </body>
   </body>
