added bootstrap, removed address, added links with bootstrap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <title>Mason Leonhart's Resume</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" type="text/css" href="main.css"
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+  integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="main.css"/>
   </head>
   <body>
     <header class="contact">
@@ -12,14 +14,24 @@
         Mason Leonhart
       </div>
       <div class="info">
-        <div class="address">
-          2574 Atlantic Drive S., Fargo, ND 58103
-        </div>
       <div class="number-email">
         (402) 216-2512 | mason.leonhart@gmail.com
       </div>
     </header>
     <body class="main-body">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <a href="education.html">Education</a>
+          </div>
+          <div class="col-sm">
+            <a href="experience.html">Experience</a>
+          </div>
+          <div class="col-sm">
+            <a href="skills.html">Skills</a>
+          </div>
+        </div>
+      </div>
       <div class="links">
         <nav>
           <ul>
