took out address in rest of pages and changed link structure

--- a/experience.html
+++ b/experience.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <title>Mason Leonhart's Resume</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" type="text/css" href="main.css"
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+  integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="main.css"/>
+</head>
   <body>
     <header class="contact">
       <div class="name">
         Mason Leonhart
       </div>
       <div class="info">
-        <div class="address">
-          2574 Atlantic Drive S., Fargo, ND 58103
+        <div class="number-email">
+          (402) 216-2512 | mason.leonhart@gmail.com
         </div>
-      <div class="number-email">
-        (402) 216-2512 | mason.leonhart@gmail.com
-      </div>
-    </header>
+      </header>
     <body class="main-body">
-      <div class="links">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-          </ul>
-        </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <a href="index.html">Home</a>
+          </div>
+          <div class="col-sm">
+            <a href="Education.html">Education</a>
+          </div>
+          <div class="col-sm">
+            <a href="skills.html">Skills</a>
+          </div>
+        </div>
       </div>
       <div class="experience">
         <h1 class="group title">Experience</h1>
