--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="footer">
       <div class="social-links">
         <div class="col-sm-1">
-          <a href="http://twitter.com"><img src="https://img.pngio.com/white-twitter-bird-transparent-background-clipart-full-size-white-twitter-logo-320_271.png"></a>
+          <a href="http://twitter.com"><img src="twitter.png"></a>
         </div>
         <div class="col-sm-1">
-          <a href="https://www.instagram.com/masonleonhart/"><img src="https://img.pngio.com/white-plains-yonkers-whole-foods-market-instagram-logo-black-and-transparent-white-instagram-logo-800_800.png"></a>
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
         </div>
         <div class="col-sm-1">
-          <a href="https://www.linkedin.com/"><img src="https://pm.uokpl.rs/fpng/s/328-3280780_transparent-david-and.png"></a>
+          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
         </div>
       </div>
     </div>
