--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </div>
     </body>
     <div class="footer">
-      <div class="social-links">
+      <div class="container">
+        <div class="row">
         <div class="col-sm-1">
           <a href="http://twitter.com"><img src="twitter.png"></a>
         </div>
@@ -47,6 +48,7 @@
         </div>
         <div class="col-sm-1">
           <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+          <row
         </div>
       </div>
     </div>
