--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="http://twitter.com"><img src="twitter.png"></a>
         </div>
         <div class="col-sm-1">
-          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"/></a>
         </div>
         <div class="col-sm-1">
           <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
