--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
       </div>
     </body>
     <div class="footer">
-      <div class="row">
-        <div class="col-sm-1">
-          <a href="http://twitter.com"><img src="twitter.png"></a>
+      <div class="social-links">
+        <div class="row">
+          <div class="col-sm-1">
+            <a href="http://twitter.com"><img src="twitter.png"></a>
+          </div>
+          <div class="col-sm-1">
+            <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+          </div>
+          <div class="col-sm-1">
+            <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+          </div>
         </div>
-        <div class="col-sm-1">
-          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"/></a>
-        </div>
-        <div class="col-sm-1">
-          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
       </div>
     </div>
-  </div>
   </body>
 </html>
