--- a/index.html
+++ b/index.html
@@ -9,29 +9,25 @@
   <link rel="stylesheet" type="text/css" href="main.css"/>
   </head>
   <body>
-    <header class="contact">
-      <div class="name">
-        Mason Leonhart
-      </div>
-      <div class="info">
-      <div class="number-email">
-        (402) 216-2512 | mason.leonhart@gmail.com
+    <header class="container">
+      <div class="row">
+        <div class="container">
+          <h1 class="col-sm-4">Mason Leonhart</h1>
+          <div class="container">
+            <div class="row">
+              <h2 class="col-sm-2">(402) 216-2512</h2>
+              <h2 class="col-sm-2">mason.leonhart@gmail.com</h2>
+            </div>
+          </div>
+        </div>
+        <nav class="col-sm-8">
+          <p><a href="education.html">Education</a></p>
+          <p><a href="experience.html">Experience</a></p>
+          <p><a href="skills.html">Skills</a></p>
+        </nav>
       </div>
     </header>
     <body class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <a href="education.html">Education</a>
-          </div>
-          <div class="col-sm">
-            <a href="experience.html">Experience</a>
-          </div>
-          <div class="col-sm">
-            <a href="skills.html">Skills</a>
-          </div>
-        </div>
-      </div>
       <div class="placeholder">
         <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
         <img src="placeholderphoto.jpg"/>
