--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
           </div>
         </div>
-        <nav class="col-sm-8">
+        <nav class="col-sm-8 text-right">
           <p><a href="education.html">Education</a></p>
           <p><a href="experience.html">Experience</a></p>
           <p><a href="skills.html">Skills</a></p>
