--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         </nav>
       </div>
     </header>
-    <body class="main-body">
-      <div class="placeholder">
-        <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
-        <img src="placeholderphoto.jpg"/>
+    <section class="jumbotron">
+      <div class="container">
+        <div class="row text-center">
+          <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
+          <img src="placeholderphoto.jpg"/>
+        </div>
       </div>
-    </body>
+    </section>
     <div class="footer">
       <div class="social-links">
         <div class="row">
