--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
         <div class="container">
           <h1 class="col-sm-4">Mason Leonhart</h1>
           <div class="container">
-            <div class="row">
-              <h2 class="col-sm-2">(402) 216-2512</h2>
-              <h2 class="col-sm-2">mason.leonhart@gmail.com</h2>
-            </div>
+            <h2 class="col-sm-4">(402) 216-2512</h2>
+            <h2 class="col-sm-4">mason.leonhart@gmail.com</h2>
           </div>
         </div>
-        <nav class="col-sm-8 text-right">
-          <p><a href="education.html">Education</a></p>
-          <p><a href="experience.html">Experience</a></p>
-          <p><a href="skills.html">Skills</a></p>
-        </nav>
+        <div class="container">
+          <div class="col-sm-8">
+            <div class="placeholderphoto">
+              <img src="placeholderphoto.jpg"/>
+            </div>
+          </div>
+          <nav class="col-sm-8 text-right">
+            <p><a href="education.html">Education</a></p>
+            <p><a href="experience.html">Experience</a></p>
+            <p><a href="skills.html">Skills</a></p>
+          </nav>
+        </div>
       </div>
     </header>
     <section class="jumbotron">
       <div class="container">
         <div class="row text-center">
           <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
-          <img src="placeholderphoto.jpg"/>
+            <div class="placeholderphoto">
+              <img src="placeholderphoto.jpg"/>
+            </div>
         </div>
       </div>
     </section>
