added div not important

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <h2 class="col-sm-4">mason.leonhart@gmail.com</h2>
           </div>
         </div>
+        /<div class="">
+
+        </div>
         <div class="container">
           <div class="col-sm-8">
             <div class="placeholderphoto">
