--- a/index.html
+++ b/index.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <title>Mason Leonhart's Resume</title>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="main.css">
-  </head>
-  <body>
-    <header class="container">
-      <div class="row">
-        <div class="col">
-          <h1>Mason Leonhart</h1>
-          <h2>(402) 216-2512</h2>
-          <h2>mason.leonhart@gmail.com</h2>
-        </div>
-        <div class="col">
-          <div class="text-right">
-            <div class="placeholderphoto">
-              <img src="placeholderphoto.jpg">
-            </div>
+<head>
+<title>Mason Leonhart's Resume</title>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <header class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Mason Leonhart</h1>
+        <h2>(402) 216-2512</h2>
+        <h2>mason.leonhart@gmail.com</h2>
+      </div>
+      <div class="col">
+        <div class="text-right">
+          <div class="placeholderphoto">
+            <img src="placeholderphoto.jpg">
           </div>
-          <nav class="text-right">
-            <p><a href="education.html">Education</a></p>
-            <p><a href="experience.html">Experience</a></p>
-            <p><a href="skills.html">Skills</a></p>
-          </nav>
+        </div>
+        <nav class="text-right">
+          <p><a href="education.html">Education</a></p>
+          <p><a href="experience.html">Experience</a></p>
+          <p><a href="skills.html">Skills</a></p>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <section class="jumbotron">
+    <div class="container">
+      <div class="row text-center">
+        <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
+      </div>
+    </div>
+  </section>
+  <footer class="container">
+    <div class="row">
+      <div class="col">
+        <div class="soclinks">
+          <a href="http://twitter.com"><img src="twitter.png"></a>
         </div>
       </div>
-    </header>
-    <section class="jumbotron">
-      <div class="container">
-        <div class="row text-center">
-          <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
+      <div class="col">
+        <div class="soclinks">
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
         </div>
       </div>
-    </section>
-    <footer class="container">
-      <div class="row">
-        <a href="http://twitter.com"><img src="twitter.png"></a>
-        <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-        <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+      <div class="col">
+        <div class="linkedin">
+          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+        </div>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
 </html>
