--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <a href="index.html">home</a>
+            <a href="index.html">Home</a>
           </div>
           <div class="col-sm">
             <a href="education.html">Education</a>
