--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </section>
   <footer class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col">
         <div class="soclinks">
           <a href="http://twitter.com"><img src="twitter.png"></a>
