added header and footer to subpages

--- a/skills.html
+++ b/skills.html
@@ -1,46 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mason Leonhart's Resume</title>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-  integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+<title>Mason Leonhart's Resume</title>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-  <body>
-    <header class="contact">
-      <div class="name">
-        Mason Leonhart
+<body>
+  <header class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Mason Leonhart</h1>
+        <h2>(402) 216-2512</h2>
+        <h2>mason.leonhart@gmail.com</h2>
       </div>
-      <div class="info">
-        <div class="number-email">
-          (402) 216-2512 | mason.leonhart@gmail.com
-        </div>
-      </header>
-    <body class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <a href="index.html">Home</a>
-          </div>
-          <div class="col-sm">
-            <a href="education.html">Education</a>
-          </div>
-          <div class="col-sm">
-            <a href="experience.html">Experience</a>
+      <div class="col">
+        <div class="text-right">
+          <div class="placeholderphoto">
+            <img src="placeholderphoto.jpg">
           </div>
         </div>
+        <nav class="text-right">
+          <p><a href="education.html">Education</a></p>
+          <p><a href="experience.html">Experience</a></p>
+          <p><a href="skills.html">Skills</a></p>
+        </nav>
       </div>
-      <div class="skills">
-        <h1 class="group title">Skills</h1>
-          <div class="skills">
-            <ul>
-              <li>Previous supervisors have told me that I run with an outstanding work ethic.</li>
-              <li>I consider myself very computer literate and I can pick new things up swiftly.</li>
-              <li>I thrive in any working enviornment, collaborating with colleagues or working alone.</li>
-              <li>I have great problem solving skills and try to find unique solutions to complications.</li>
-            </ul>
-          </div>
+    </div>
+  </header>
+  <body class="main-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="col-sm">
+          <a href="education.html">Education</a>
+        </div>
+        <div class="col-sm">
+          <a href="experience.html">Experience</a>
+        </div>
       </div>
-    </body>
+    </div>
+    <div class="skills">
+      <h1 class="group title">Skills</h1>
+        <div class="skills">
+          <ul>
+            <li>Previous supervisors have told me that I run with an outstanding work ethic.</li>
+            <li>I consider myself very computer literate and I can pick new things up swiftly.</li>
+            <li>I thrive in any working enviornment, collaborating with colleagues or working alone.</li>
+            <li>I have great problem solving skills and try to find unique solutions to complications.</li>
+          </ul>
+        </div>
+    </div>
+  </body>
+  <footer class="container">
+    <div class="row text-center">
+      <div class="col">
+        <div class="soclinks">
+          <a href="http://twitter.com"><img src="twitter.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="soclinks">
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="linkedin">
+          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
