--- a/education.html
+++ b/education.html
@@ -1,46 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mason Leonhart's Resume</title>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-  integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+<title>Mason Leonhart's Resume</title>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-  <body>
-    <header class="contact">
-      <div class="name">
-        Mason Leonhart
+<body>
+  <header class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Mason Leonhart</h1>
+        <h2>(402) 216-2512</h2>
+        <h2>mason.leonhart@gmail.com</h2>
       </div>
-      <div class="info">
-        <div class="number-email">
-          (402) 216-2512 | mason.leonhart@gmail.com
-        </div>
-      </header>
-    <body class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <a href="index.html">Home</a>
-          </div>
-          <div class="col-sm">
-            <a href="experience.html">Experience</a>
-          </div>
-          <div class="col-sm">
-            <a href="skills.html">Skills</a>
+      <div class="col">
+        <div class="text-right">
+          <div class="placeholderphoto">
+            <img src="placeholderphoto.jpg">
           </div>
         </div>
+        <nav class="text-right">
+          <p><a href="index.html">Home</a></p>
+          <p><a href="experience.html">Experience</a></p>
+          <p><a href="skills.html">Skills</a></p>
+        </nav>
       </div>
-      <div class="education">
-        <h1 class="group title">Education</h1>
-          <div class="place-group">
-            <h2 class="place">St. Michael-Albertville Senior High School,</h2>
-            <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
-            <h3 class="position">&mdash; High School Diploma</h3>
-            <h4 class="date">September 2014 - June 2018</h4>
-            <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
-            </span> game in my free time. </h5>
-          </div>
+    </div>
+  </header>
+  <body class="main-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="col-sm">
+          <a href="experience.html">Experience</a>
+        </div>
+        <div class="col-sm">
+          <a href="skills.html">Skills</a>
+        </div>
       </div>
-    </body>
+    </div>
+    <div class="education">
+      <h1 class="group title">Education</h1>
+        <div class="place-group">
+          <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+          <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
+          <h3 class="position">&mdash; High School Diploma</h3>
+          <h4 class="date">September 2014 - June 2018</h4>
+          <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
+          </span> game in my free time. </h5>
+        </div>
+    </div>
+  </body>
+  <footer class="container">
+    <div class="row text-center">
+      <div class="col">
+        <div class="soclinks">
+          <a href="http://twitter.com"><img src="twitter.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="soclinks">
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="linkedin">
+          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
