--- a/experience.html
+++ b/experience.html
@@ -1,59 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mason Leonhart's Resume</title>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta content="utf-8" http-equiv="encoding">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-  integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+<title>Mason Leonhart's Resume</title>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-  <body>
-    <header class="contact">
-      <div class="name">
-        Mason Leonhart
+<body>
+  <header class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Mason Leonhart</h1>
+        <h2>(402) 216-2512</h2>
+        <h2>mason.leonhart@gmail.com</h2>
       </div>
-      <div class="info">
-        <div class="number-email">
-          (402) 216-2512 | mason.leonhart@gmail.com
-        </div>
-      </header>
-    <body class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <a href="index.html">Home</a>
-          </div>
-          <div class="col-sm">
-            <a href="Education.html">Education</a>
-          </div>
-          <div class="col-sm">
-            <a href="skills.html">Skills</a>
+      <div class="col">
+        <div class="text-right">
+          <div class="placeholderphoto">
+            <img src="placeholderphoto.jpg">
           </div>
         </div>
+        <nav class="text-right">
+          <p><a href="indexhtml">Home</a></p>
+          <p><a href="education.html">Education</a></p>
+          <p><a href="skills.html">Skills</a></p>
+        </nav>
       </div>
-      <div class="experience">
-        <h1 class="group title">Experience</h1>
-          <div class="place-group">
-            <h2 class="place">The Tavern Grill,</h2>
-            <h2 class="place">4504 32nd Ave S., Fargo, ND 58104</h2>
-            <h3 class="position">&mdash; Server, Host</h3>
-            <h4 class="date">November 2019 - March 2020</h4>
-            <h5 class="description"><span>Responsibilites:</span> Serving, greeting, and sectioning of guests.</h5>
-          </div>
-          <div class="place-group">
-            <h2 class="place">Cintas,</h2>
-            <h2 class="place">1700 Main Ave W., West Fargo, ND 58078</h2>
-            <h3 class="position">&mdash; Loader/ Unloader</h3>
-            <h4 class="date">November 2018 - September 2019</h4>
-            <h5 class="description"><span>Responsibilites:</span> Worked in the warehouse loading and unloading product from company trucks.</h5>
-          </div>
-          <div class="place-group">
-            <h2 class="place">Pepper's Sports Cafe,</h2>
-            <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
-            <h3 class="position">&mdash; Server, Line Cook</h3>
-            <h4 class="date">June 2018 - November 2018</h4>
-            <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5>
-          </div>
+    </div>
+  </header>
+  <body class="main-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <a href="index.html">Home</a>
+        </div>
+        <div class="col-sm">
+          <a href="Education.html">Education</a>
+        </div>
+        <div class="col-sm">
+          <a href="skills.html">Skills</a>
+        </div>
       </div>
-    </body>
+    </div>
+    <div class="experience">
+      <h1 class="group title">Experience</h1>
+        <div class="place-group">
+          <h2 class="place">The Tavern Grill,</h2>
+          <h2 class="place">4504 32nd Ave S., Fargo, ND 58104</h2>
+          <h3 class="position">&mdash; Server, Host</h3>
+          <h4 class="date">November 2019 - March 2020</h4>
+          <h5 class="description"><span>Responsibilites:</span> Serving, greeting, and sectioning of guests.</h5>
+        </div>
+        <div class="place-group">
+          <h2 class="place">Cintas,</h2>
+          <h2 class="place">1700 Main Ave W., West Fargo, ND 58078</h2>
+          <h3 class="position">&mdash; Loader/ Unloader</h3>
+          <h4 class="date">November 2018 - September 2019</h4>
+          <h5 class="description"><span>Responsibilites:</span> Worked in the warehouse loading and unloading product from company trucks.</h5>
+        </div>
+        <div class="place-group">
+          <h2 class="place">Pepper's Sports Cafe,</h2>
+          <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
+          <h3 class="position">&mdash; Server, Line Cook</h3>
+          <h4 class="date">June 2018 - November 2018</h4>
+          <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5>
+        </div>
+    </div>
+  </body>
+  <footer class="container">
+    <div class="row text-center">
+      <div class="col">
+        <div class="soclinks">
+          <a href="http://twitter.com"><img src="twitter.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="soclinks">
+          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="linkedin">
+          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
