--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <nav class="text-right">
-          <p><a href="indexhtml">Home</a></p>
+          <p><a href="index.html">Home</a></p>
           <p><a href="education.html">Education</a></p>
           <p><a href="skills.html">Skills</a></p>
         </nav>
