--- a/skills.html
+++ b/skills.html
@@ -22,9 +22,9 @@
           </div>
         </div>
         <nav class="text-right">
+          <p><a href="index.html">Home</a></p>
           <p><a href="education.html">Education</a></p>
           <p><a href="experience.html">Experience</a></p>
-          <p><a href="skills.html">Skills</a></p>
         </nav>
       </div>
     </div>
