--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">Resume</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
+            <div class="dropdown-menu">
+              <a href="education.html">Education</a>
+              <a href="experience.html">Experience</a>
+              <a href="skills.html">Skills</a>
+            </div>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Projects</a>
@@ -24,7 +29,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <header class="container">
     <div class="row">
       <div class="col">
