--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
             <div class="dropdown-menu">
               <ul>
-                <a href="education.html">Education</a>
-                <a href="experience.html">Experience</a>
-                <a href="skills.html">Skills</a>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="skills.html">Skills</a></li>
               </ul>
             </div>
         </li>
