--- a/experience.html
+++ b/experience.html
@@ -19,13 +19,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
-        <div class="dropdown-menu">
-          <ul>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="skills.html">Skills</a></li>
-          </ul>
-        </div>
+          <div class="dropdown-menu">
+            <ul>
+              <li><a href="education.html">Education</a></li>
+              <li><a href="experience.html">Experience</a></li>
+              <li><a href="skills.html">Skills</a></li>
+            </ul>
+          </div>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Projects</a>
@@ -85,4 +85,5 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</body>
 </html>
