--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
       </ul>
     </div>
   </nav>
-</header>
 
-<section class="jumbotron">
-</section>
+  <section class="jumbotron">
+  <dev class="container">
+    <dev class="placeholderphoto">
+      <img src="placeholderphoto.jpg">
+    </dev>
+  </dev>
+  </section>
+</header>
 
 <footer class="container">
   <div class="row text-center">
