added be legendary, added new photo assets

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
   <section class="jumbotron">
   <dev class="container">
-    <dev class="placeholderphoto">
-      <img src="placeholderphoto.jpg">
-    </dev>
+    <img class="mephoto" src="mephoto.jpg">
+  <dev class="beLegendary">
+      <p style="bottom: 60px;">be</p>
+      <p>legendary.</p>
+  </dev>
   </dev>
   </section>
 </header>
