changed ndoutline asset and positioned in bottom right of jumbotron

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
   </nav>
 
   <section class="jumbotron">
-  <dev class="container">
-    <img class="mephoto" src="mephoto.jpg">
-  <dev class="beLegendary">
-      <p style="bottom: 60px;">be</p>
-      <p>legendary.</p>
-  </dev>
-  </dev>
+    <dev class="container">
+      <img class="mephoto" src="mephoto.jpg">
+    <dev class="beLegendary">
+        <p style="bottom: 60px;">be</p>
+        <p>legendary.</p>
+    </dev>
+      <img class="ndoutline" src="NDoutline.png">
+    </dev>
   </section>
 </header>
 
