--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
       <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,17 @@
       </ul>
     </div>
   </nav>
+
+  <section class="jumbotron">
+    <dev class="container">
+      <img class="mephoto" src="mephoto.jpg">
+    <dev class="beLegendary">
+        <p style="bottom: 60px;">be</p>
+        <p>legendary.</p>
+    </dev>
+      <img class="ndoutline" src="NDoutline.png">
+    </dev>
+  </section>
 </header>
 
 <body class="main-body">
