added contact info and respective css

--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
   </nav>
 
   <section class="jumbotron">
-    <dev class="container">
-      <img class="mephoto" src="mephoto.jpg">
+    <dev class="contactInfo">
+      <p>Mason Leonhart</p>
+      <p>(402) 216-2512</p>
+      <p>mason.leonhart@gmail.com</p>
+    </dev>
     <dev class="beLegendary">
         <p style="bottom: 60px;">be</p>
         <p>legendary.</p>
     </dev>
-      <img class="ndoutline" src="NDoutline.png">
-    </dev>
+    <img class="mephoto" src="mephoto.jpg">
+    <img class="ndoutline" src="NDoutline.png">
   </section>
 </header>
 
