updated header in subpages

--- a/education.html
+++ b/education.html
@@ -34,15 +34,18 @@
     </div>
   </nav>
 
-    <section class="jumbotron">
-    <dev class="container">
-      <img class="mephoto" src="mephoto.jpg">
+  <section class="jumbotron">
+    <dev class="contactInfo">
+      <p>Mason Leonhart</p>
+      <p>(402) 216-2512</p>
+      <p>mason.leonhart@gmail.com</p>
+    </dev>
     <dev class="beLegendary">
         <p style="bottom: 60px;">be</p>
         <p>legendary.</p>
     </dev>
-      <img class="ndoutline" src="NDoutline.png">
-    </dev>
+    <img class="mephoto" src="mephoto.jpg">
+    <img class="ndoutline" src="NDoutline.png">
   </section>
 </header>
 
