--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<header>
+<div class="container header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
@@ -35,19 +35,19 @@
   </nav>
 
   <section class="jumbotron">
-    <dev class="contactInfo">
+    <div class="contactInfo">
       <p>Mason Leonhart</p>
       <p>(402) 216-2512</p>
       <p>mason.leonhart@gmail.com</p>
-    </dev>
-    <dev class="beLegendary">
+    </div>
+    <div class="beLegendary">
         <p style="bottom: 60px;">be</p>
         <p>legendary.</p>
-    </dev>
+    </div>
     <img class="mephoto" src="mephoto.jpg">
     <img class="ndoutline" src="NDoutline.png">
   </section>
-</header>
+</div>
 
 <footer class="container">
   <div class="row text-center">
