changed header to kinda work with flexbox, changed mephoto

--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
   </nav>
 
   <section class="jumbotron">
-    <div class="contactInfo">
-      <p>Mason Leonhart</p>
-      <p>(402) 216-2512</p>
-      <p>mason.leonhart@gmail.com</p>
+    <div class="container contactInfo" style="padding-left: 0;">
+      <img class="mephoto" src="mephoto.jpg">
+      <ul style="list-style: none; padding-left: 16px;">
+        <li>Mason Leonhart</li>
+        <li>(402) 216-2512</li>
+        <li>mason.leonhart@gmail.com</li>
+      </ul>
     </div>
-    <div class="beLegendary">
-        <p style="bottom: 60px;">be</p>
-        <p>legendary.</p>
+    <div class="container beLegendary" style="padding-left: 0;">
+      <ul style="list-style: none; padding-left: 16px;">
+        <li>be</li>
+        <li>legendary.</li>
+      </ul>
+      <img class="ndoutline" src="NDoutline.png">
     </div>
-    <img class="mephoto" src="mephoto.jpg">
-    <img class="ndoutline" src="NDoutline.png">
   </section>
 </div>
 
