FIGURED OUT FLEXBOX IN THE HEADER!!! WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOT

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <li>mason.leonhart@gmail.com</li>
       </ul>
     </div>
-    <div class="container beLegendary" style="padding-left: 0;">
-      <ul style="list-style: none; padding-left: 16px;">
-        <li>be</li>
+    <div class="container beLegendary" style="padding-left: 0; padding-right: 0; margin-top: -200px;">
+      <ul style="list-style: none; padding-left: 0px; margin-bottom: 0;">
+        <li style="margin-bottom: -30px;">be</li>
         <li>legendary.</li>
       </ul>
-      <img class="ndoutline" src="NDoutline.png">
+      <img class="ndoutline" src="NDoutline.png" style="margin-bottom: -35px;">
     </div>
   </section>
 </div>
