cleaned up footer container

--- a/index.html
+++ b/index.html
@@ -53,25 +53,11 @@
   </section>
 </div>
 
-<footer class="container">
-  <div class="row text-center">
-    <div class="col">
-      <div class="soclinks">
-        <a href="http://twitter.com"><img src="twitter.png"></a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="soclinks">
-        <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="linkedin">
-        <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
-      </div>
-    </div>
-  </div>
-</footer>
+<section class="container footer">
+  <a href="http://twitter.com"><img src="twitter.png"></a>
+  <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+  <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+</section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
