--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-  <section class="jumbotron">
+  <section class="jumbotron header">
     <div class="container contactInfo" style="padding-left: 0;">
       <img class="mephoto" src="mephoto.jpg">
       <ul style="list-style: none; padding-left: 16px;">
