replaced body tags in subpages

--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
   </section>
 </div>
 
-<body class="main-body">
+<section class="container body">
   <div class="education">
     <h1 class="group title">Education</h1>
       <div class="place-group">
@@ -65,7 +65,7 @@
         </span> game in my free time. </h5>
       </div>
   </div>
-</body>
+</section>
 
 <section class="container footer">
   <a href="http://twitter.com"><img src="twitter.png"></a>
