--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@
   </section>
 </div>
 
-<body class="main-body">
+<section class="container body">
   <div class="experience">
     <h1 class="group title">Experience</h1>
       <div class="place-group">
@@ -78,7 +78,7 @@
         <h5 class="description"><span>Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5>
       </div>
   </div>
-</body>
+</section>
 
 <section class="container footer">
   <a href="http://twitter.com"><img src="twitter.png"></a>
