--- a/skills.html
+++ b/skills.html
@@ -53,7 +53,7 @@
   </section>
 </div>
 
-<body class="main-body">
+<section class="container body">
   <div class="skills">
     <h1 class="group title">Skills</h1>
       <div class="skills">
@@ -65,7 +65,7 @@
         </ul>
       </div>
   </div>
-</body>
+</section>
 
 <section class="container footer">
   <a href="http://twitter.com"><img src="twitter.png"></a>
