moved styling from html to css

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
   </nav>
 
   <section class="jumbotron header">
-    <div class="container contactInfo" style="padding-left: 0;">
+    <div class="container contactInfo">
       <img class="mephoto" src="mephoto.jpg">
-      <ul style="list-style: none; padding-left: 16px;">
+      <ul class="contactList">
         <li>Mason Leonhart</li>
         <li>(402) 216-2512</li>
         <li>mason.leonhart@gmail.com</li>
       </ul>
     </div>
-    <div class="container beLegendary" style="padding-left: 0; padding-right: 0; margin-top: -200px;">
-      <ul style="list-style: none; padding-left: 0px; margin-bottom: 0;">
-        <li style="margin-bottom: -30px;">be</li>
-        <li>legendary.</li>
+    <div class="container beLegendary">
+      <ul class="legendaryList">
+        <li class="be">be</li>
+        <li class="legendary">legendary.</li>
       </ul>
-      <img class="ndoutline" src="NDoutline.png" style="margin-bottom: -35px;">
+      <img class="ndoutline" src="NDoutline.png">
     </div>
   </section>
 </div>
