Started writing about me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 </section>
 
 <section class="container body">
-  <h1>Abooot Meee</h1>
+  <h1>About Me</h1>
+  <p>My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a Masters degree at the University of Nebraska Omaha.
+  Growing up in Omaha is where my love for technology was established.</p>
   <p></p>
 </section>
 
