--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
 
 <section class="container body">
   <div class="education">
-    <h1 class="group title">Education</h1>
+    <h1 class="groupTitle">Education</h1>
     <div class="place-group">
       <h2 class="place">St. Michael-Albertville Senior High School,</h2>
       <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
