Change “group title” to “groupTitle” same prev com

--- a/experience.html
+++ b/experience.html
@@ -53,22 +53,22 @@
 
 <section class="container body">
   <div class="experience">
-    <h1 class="group title">Experience</h1>
-    <div class="place-group">
+    <h1 class="groupTitle">Experience</h1>
+    <div class="placeGroup">
       <h2 class="place">The Tavern Grill,</h2>
       <h2 class="place">4504 32nd Ave S., Fargo, ND 58104</h2>
       <h3 class="position">&mdash; Server, Host</h3>
       <h4 class="date">November 2019 - March 2020</h4>
       <h5 class="description"><span>Responsibilites:</span> Serving, greeting, and sectioning of guests.</h5>
     </div>
-    <div class="place-group">
+    <div class="placeGroup">
       <h2 class="place">Cintas,</h2>
       <h2 class="place">1700 Main Ave W., West Fargo, ND 58078</h2>
       <h3 class="position">&mdash; Loader/ Unloader</h3>
       <h4 class="date">November 2018 - September 2019</h4>
       <h5 class="description"><span>Responsibilites:</span> Worked in the warehouse loading and unloading product from company trucks.</h5>
     </div>
-    <div class="place-group">
+    <div class="placeGroup">
       <h2 class="place">Pepper's Sports Cafe,</h2>
       <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
       <h3 class="position">&mdash; Server, Line Cook</h3>
