Added = to groupTitle class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </section>
 
 <section class="container body">
-  <h1 class"groupTitle">About Me</h1>
+  <h1 class="groupTitle">About Me</h1>
   <p>My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a masters degree at the University of Nebraska Omaha.
   Growing up in Omaha is where my love for technology was able to flourish with my attendance to R.M Marrs Magnet Center, a school that specialized in science,
   technology, engineering, and math.</p>
