Added class to ul

--- a/skills.html
+++ b/skills.html
@@ -53,7 +53,7 @@
 
 <section class="container body">
   <h1 class="groupTitle">Skills</h1>
-  <ul>
+  <ul class"skillsList">
     <li>Previous supervisors have told me that I run with an outstanding work ethic.</li>
     <li>I consider myself very computer literate and I can pick new things up swiftly.</li>
     <li>I thrive in any working enviornment, collaborating with colleagues or working alone.</li>
