Added another skill

--- a/skills.html
+++ b/skills.html
@@ -56,7 +56,8 @@
   <ul class="skillsList">
     <li>Previous supervisors have told me that I run with an outstanding work ethic.</li>
     <li>I consider myself very computer literate and I can pick new things up swiftly.</li>
-    <li>I thrive in any working enviornment, collaborating with colleagues or working alone.</li>
+    <li>I’m very attentive and a great listener, and can communicate back in both verbal and written forms.</li>
+    <li>I thrive in any working environment, collaborating with colleagues or working alone.</li>
     <li>I have great problem solving skills and try to find unique solutions to complications.</li>
   </ul>
 </section>
