Changed twitter link

--- a/skills.html
+++ b/skills.html
@@ -63,7 +63,7 @@
 </section>
 
 <section class="container footer">
-  <a href="http://twitter.com" target="_blank"><img src="twitter.png"></a>
+  <a href="http://twitter.com/bigm526/" target="_blank"><img src="twitter.png"></a>
   <a href="https://www.instagram.com/masonleonhart/" target="_blank"><img src="instagram.png"></a>
   <a href="https://www.linkedin.com/" target="_blank"><img src="linkedin.png"></a>
 </section>
