Added class to last p tag

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   robots to perform tasks that were assigned to us as well as other AP matha and science courses.</p>
   <p class="aboutMe">I recieved my diploma from STMA and moved back to Fargo where I had the goal to attend NDSU and major in their computer engineering program. However, I decided to take some time from school and went to work instead.
   I learned what it was actually like to participate in our workforce for a bit, but I am ready to start learning again.</p>
-  <p>During the summer months, I like to spend my time at the archery or trapshooting range, spending time at the lake like anyone else from Fargo. Otherwise, I love spending time with my friends and family. If I'm not doing any of those things,
+  <p class="aboutMe">During the summer months, I like to spend my time at the archery or trapshooting range, spending time at the lake like anyone else from Fargo. Otherwise, I love spending time with my friends and family. If I'm not doing any of those things,
   you will probably find me on my computer where I love to play many different types of strategy games, or am tackling raid bosses in World of Warcraft.</p>
 </section>
 
