--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   robotics team, and taking another competetive robotics class the year after.</p>
   <p class="aboutMe">After graduating from R.M. Marrs, our family moved back up north to St. Michael, MN. Here I attended St. Michael-Albertville Senior High School. STMA was another school that had a strong
   STEM cirruculum, and I was able to take multiple engineering courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
-  robots to perform tasks that were assigned to us as well as other AP matha and science courses.</p>
+  robots to perform tasks that were assigned to us as well as other AP math and science courses.</p>
   <p class="aboutMe">I recieved my diploma from STMA and moved back to Fargo where I had the goal to attend NDSU and major in their computer engineering program. However, I decided to take some time from school and went to work instead.
   I learned what it was actually like to participate in our workforce for a bit, but I am ready to start learning again.</p>
   <p class="aboutMe">During the summer months, I like to spend my time at the archery or trapshooting range, spending time at the lake like anyone else from Fargo. Otherwise, I love spending time with my friends and family. If I'm not doing any of those things,
