change file paths

--- a/assignment-2/wk2.html
+++ b/assignment-2/wk2.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Tier 1 Assignment Week 2</title>
-    <script src="assignment-2/scripts/aboutMe.js" charset="utf-8"></script>
-    <script src="assignment-2/scripts/script.js" defer></script>
-    <link rel="stylesheet" href="assignment-2/style.css">
+    <script src="scripts/aboutMe.js" charset="utf-8"></script>
+    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body id="background">
     <h1>Week 2 Assignment</h1>
