--- a/assignment-4/wk4.html
+++ b/assignment-4/wk4.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
-    <script src="assignment-4/scripts/jquery-3.5.1.min.js" charset="utf-8"></script>
-    <script src="assignment-4/scripts/week4.js"></script>
+    <script src="scripts/jquery-3.5.1.min.js" charset="utf-8"></script>
+    <script src="scripts/week4.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="assignment-4/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <header>
