renamed files, added finsihed wk5 project

--- a/assignment-2/wk2.html
+++ b/assignment-2/wk2.html
@@ -3,8 +3,8 @@
   <head>
     <title>Tier 1 Assignment Week 2</title>
     <script src="scripts/aboutMe.js" charset="utf-8"></script>
-    <script src="scripts/script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="scripts/wk2script.js" defer></script>
+    <link rel="stylesheet" href="wk2style.css">
   </head>
   <body id="background">
     <h1>Week 2 Assignment</h1>
