--- a/education.html
+++ b/education.html
@@ -28,6 +28,16 @@
             </ul>
           </div>
         </li>
+        <li class="nav-item">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Projects</a>
+          <div class="dropdown-menu">
+            <ul>
+              <li><a href="assignment-2/wk2.html">Week 2</a></li>
+              <li><a href="assignment-4/wk4.html">Week 4</a></li>
+              <li><a href="assignment-5/wk5.html">Week 5</a></li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </nav>
